docs fix tabs spacing issue (#603)

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -882,6 +882,17 @@ input.cookbookSearch {
   padding: 0.75rem 1rem !important;
 }
 
+.tabs {
+  display: flex !important;
+  flex-wrap: wrap !important;
+  width: 100% !important;
+  overflow-x: auto !important;
+  overflow-y: clip !important;
+  box-sizing: border-box !important;
+  row-gap: 0.75rem !important; 
+}
+
+
 [class*="tabs__item"]:hover {
   background-color: #FFD0CE !important;
   transform: translateY(-1px);
